Update 'tdvvr9jvk-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:1fee4ea02300823ed46056df1f57c579aef31523@sha256:2e676416273450d698f405a1451d9e418fedfe0b7c8316326ea55da9193c87de

--- a/components/tdvvr9jvk-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/tdvvr9jvk-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: tdvvr9jvk-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:1fee4ea02300823ed46056df1f57c579aef31523@sha256:2e676416273450d698f405a1451d9e418fedfe0b7c8316326ea55da9193c87de
+          name: container-image
